@@ -3,6 +3,7 @@ package ru.job4j.collection.departments;
 import org.junit.Test;
 
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 import static org.hamcrest.MatcherAssert.assertThat;
@@ -12,33 +13,33 @@ public class DepartmentsTest {
 
     @Test
     public void whenMissed() {
-        List<String> input = Arrays.asList("k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> input = List.of("k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> rsl = Departments.fillGaps(input);
         assertThat(rsl, is(expect));
     }
 
     @Test
     public void whenManyMissed() {
-        List<String> input = Arrays.asList("k1/sk1/ssk1/skk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1", "k1/sk1/ssk1", "k1/sk1/ssk1/skk1");
+        List<String> input = List.of("k1/sk1/ssk1/skk1");
+        List<String> expect = List.of("k1", "k1/sk1", "k1/sk1/ssk1", "k1/sk1/ssk1/skk1");
         List<String> rsl = Departments.fillGaps(input);
         assertThat(rsl, is(expect));
     }
 
     @Test
     public void whenNonChange() {
-        List<String> input = Arrays.asList("k1", "k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> input = List.of("k1", "k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> rsl = Departments.fillGaps(input);
         assertThat(rsl, is(expect));
     }
 
     @Test
     public void whenManyListsAndManyMissed() {
-        List<String> input = Arrays.asList("k1/sk1", "k1/sk1/ssk1", "k1/sk1/ssk2", "k1/sk2",
+        List<String> input = List.of("k1/sk1", "k1/sk1/ssk1", "k1/sk1/ssk2", "k1/sk2",
                 "k2", "k2/sk1/ssk1", "k2/sk1/ssk2");
-        List<String> expect = Arrays.asList("k2", "k2/sk1", "k2/sk1/ssk1", "k2/sk1/ssk2",
+        List<String> expect = List.of("k2", "k2/sk1", "k2/sk1/ssk1", "k2/sk1/ssk2",
                 "k1", "k1/sk1", "k1/sk1/ssk1", "k1/sk1/ssk2", "k1/sk2");
         List<String> rsl = Departments.fillGaps(input);
         rsl.sort(new DepDescComp());
