@@ -3,6 +3,7 @@ package ru.job4j.collection.list;
 import org.junit.Test;
 
 import java.util.Arrays;
+import java.util.List;
 
 import static org.hamcrest.Matchers.is;
 import static org.hamcrest.MatcherAssert.assertThat;
@@ -13,7 +14,7 @@ public class ConvertList2ArrayTest {
     public void when7ElementsThen9InArray() {
         ConvertList2Array list = new ConvertList2Array();
         int[][] result = list.toArray(
-                Arrays.asList(1, 2, 3, 4, 5, 6, 7), 3
+                List.of(1, 2, 3, 4, 5, 6, 7), 3
         );
         int[][] expect = {
                 {1, 2, 3},
@@ -27,7 +28,7 @@ public class ConvertList2ArrayTest {
     public void when2ElementsThen4InArray() {
         ConvertList2Array list = new ConvertList2Array();
         int[][] result = list.toArray(
-                Arrays.asList(1, 2, 3), 2
+                List.of(1, 2, 3), 2
         );
         int[][] expect = {
                 {1, 2},
