@@ -22,7 +22,7 @@ public class ConvertListTest {
         input.add(new int[] {4, 5, 6});
         input.add(new int[] {7, 8, 9});
         List<Integer> result = ConvertList.convert(input);
-        List<Integer> expected = Arrays.asList(1, 2, 3, 4, 5, 6, 7, 8, 9);
+        List<Integer> expected = List.of(1, 2, 3, 4, 5, 6, 7, 8, 9);
         assertThat(result, is(expected));
     }
 
@@ -32,7 +32,7 @@ public class ConvertListTest {
         input.add(new int[] {1});
         input.add(new int[] {2, 3, 4});
         List<Integer> result = ConvertList.convert(input);
-        List<Integer> expected = Arrays.asList(1, 2, 3, 4);
+        List<Integer> expected = List.of(1, 2, 3, 4);
         assertThat(result, is(expected));
     }
 }
